[package]
name = "study-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.145" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
tower-http = { features = ["cors", "trace"], version = "0.6.8" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
argon2 = "0.5"
rand_core = { version = "0.9.3", features = ["std", "os_rng"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
uuid = { version = "1.19.0", features = ["v7", "serde"] }
rand = "0.9.2"
tower = { version = "0.5.2", features = ["limit"] }
lazy-limit = "1"
real = { version = "0.1", features = ["axum"] }
axum-governor = "1.0.3"
validator = { version = "0.20.0", features = ["derive"] }